# logpose

./: .gitignore  AGENTS.md  README.md  lg  pyproject.toml  tix
hermes_tix/: __init__.py  cli.py  config.py  db.py  graph.py  opencode.py
logpose/: __init__.py  cli.py  config.py  db.py  graph.py  opencode.py
plans/: task-70-sentry-integration-auto-create-bugs-from-sentry-issues.md  task-74-pr-workflow-auto-branch-tasks-for-certain-directories.md
skills/: SKILL.md
skills/references/: internal-notes.md
skills/templates/: plan-template.md
tests/: test_bugs.py  test_complexity_zero.py  test_env.py  test_init.py  test_list_defaults.py  test_model_override.py  test_pr_workflow.py  test_project_update.py  test_report.py  test_sentry_poll.py  test_sentry_resolve.py  test_ui_command.py
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.server.json  vite.config.ts
ui/server/: config.test.ts  config.ts  data.test.ts  data.ts  index.ts
ui/src/: App.tsx
ui/src/api/: client.ts
ui/src/components/: ActivityTimeline.tsx  BrainList.tsx  Dashboard.tsx  IdeasList.tsx  KanbanBoard.tsx  ProjectDetail.tsx  SettingsPage.test.tsx  SettingsPage.tsx  Sidebar.tsx  TaskCard.tsx  views.test.tsx
ui/src/styles/: app.css
ui/src/types/: index.ts
