[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "logpose"
version = "0.1.0"
description = "Track projects, ideas, and tasks — the log pose to your next island."
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
lg = "logpose.cli:main"

[tool.setuptools.packages.find]
include = ["logpose*"]
